--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=reservation_movies_app
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
+
+logging.level.org.springframework.core.env=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CORE_ENV}
+
+api.prefix=${API_PREFIX}
+
+auth.token.expirationInMils=${AUTH_TOKEN_EXPIRATION_IN_MILS}
+auth.token.jwtSecret=${AUTH_TOKEN_JWT_SECRET}
