--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ target/
 *.iws
 *.iml
 *.ipr
-.env
-application.properties
-application.yml
+/src/main/resources/.env
+/src/main/resources/application.properties
+
 
 ### NetBeans ###
 /nbproject/private/
